--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,6 +20,46 @@
   width: 100%;
 }
 
+.navlink-button {
+  display: inline-block;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid red;
+  background-color: greenyellow;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.navlink-button.primary {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.navlink-button.primary:hover {
+  color: #fff;
+  background-color: #0056b3;
+  border-color: #004085;
+}
+
+.navlink-button.warning {
+  color: #fff;
+  background-color: #ffc107;
+  border-color: #ffc107;
+}
+
+.navlink-button.warning:hover {
+  color: #fff;
+  background-color: #e0a800;
+  border-color: #d39e00;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -147,6 +187,7 @@ color: #fff;
 
 .barra {
   display: flex;
+  justify-content: space-between;
    background-color: black;
   color: white;
   gap: 60px;
